[package]
name = "asam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "test-util"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
ethers = { version = "2.0", features = ["rustls", "abigen", "legacy", "ws"] }
async-trait = "0.1"
actix-web = "4.0"
actix-files = "0.6"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"


